--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="tab_title_day">Hoje</string>
     <string name="tab_title_month">Mês</string>
     <string name="tab_title_overview">Geral</string>
+    <string name="list_empty">Parece que não há registros...</string>
+    <string name="widget_button_text">Checkpoint</string>
+    <string name="message_checkpoint_create_success">Checkpoint criado em:</string>
+    <string name="message_checkpoint_create_error">Não foi possível criar o checkpoint!</string>
 </resources>
