--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,4 +19,9 @@
     <string name="dialog_hours_title">Horas por dia</string>
     <string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
     <string name="menu_settings">Preferências</string>
+    <string name="menu_add_checkpoint">Checkpoint</string>
+    <string name="dialog_add_checkpoint_title">Selecione a hora</string>
+    <string name="dialog_add_checkpoint_title2">Selecione o dia e a hora</string>
+    <string name="button_ok">OK</string>
+    <string name="button_cancel">Cancelar</string>
 </resources>
