--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Banco de Horas</string>
-    <string name="tab_title_blotter">Registros</string>
-    <string name="tab_title_day">Hoje</string>
-    <string name="tab_title_month">Mês</string>
-    <string name="tab_title_overview">Geral</string>
-    <string name="list_empty">Você ainda não começou a trabalhar!</string>
+    <string name="app_name">Hours Bank</string>
+    <string name="tab_title_blotter">Blotter</string>
+    <string name="tab_title_day">Today</string>
+    <string name="tab_title_month">Month</string>
+    <string name="tab_title_overview">Overview</string>
+    <string name="list_empty">Don\'t you need to start to work!?</string>
     <string name="widget_button_text">Checkpoint</string>
-    <string name="message_checkpoint_create_success">Checkpoint criado em:</string>
-    <string name="message_checkpoint_create_error">Não foi possível criar o checkpoint!</string>
-    <string name="message_checkpoint_created">Checkpoint Criado!</string>
-    <string name="message_checkpoint_edited">Checkpoint Editado!</string>
-    <string name="message_checkpoint_deleted">Checkpoint excluído!</string>
-    <string name="total_hours">Total Executado:</string>
-    <string name="monday">Segunda-Feira</string>
-    <string name="tuesday">Terça-Feira</string>
-    <string name="wednesday">Quarta-Feira</string>
-    <string name="thursday">Quinta-Feira</string>
-    <string name="friday">Sexta-Feira</string>
-    <string name="saturday">Sábado</string>
-    <string name="dialog_hours_title">Horas por dia</string>
-    <string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
-    <string name="menu_settings">Preferências</string>
+    <string name="message_checkpoint_create_success">Checkpoint created at:</string>
+    <string name="message_checkpoint_create_error">I\'m sorry! Was not possible to create the checkpoint!</string>
+    <string name="message_checkpoint_created">Checkpoint created!</string>
+    <string name="message_checkpoint_edited">Checkpoint updated!</string>
+    <string name="message_checkpoint_deleted">Checkpoint deleted!</string>
+    <string name="total_hours">Total Time:</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="dialog_hours_title">Hours By Day</string>
+    <string name="dialog_hours_summary">How many hours do you have to work this day? eg. 9:00</string>
+    <string name="menu_settings">Preferences</string>
     <string name="menu_add_checkpoint">Checkpoint</string>
-    <string name="dialog_add_checkpoint_title">Selecione a hora</string>
-    <string name="dialog_add_checkpoint_title2">Selecione o dia e a hora</string>
+    <string name="dialog_add_checkpoint_title">Select the time</string>
+    <string name="dialog_add_checkpoint_title2">Select Date and Time</string>
     <string name="button_ok">OK</string>
-    <string name="button_cancel">Cancelar</string>
-    <string name="hours_day">Horas por dia</string>
-    <string name="min_lunch_time">Tempo mín de almoço</string>
-    <string name="min_lunch_time_summary">Defina o tempo mínimo de almoço. 0:00 se não houver tempo mínimo.</string>
-    <string name="menu_edit">Editar</string>
-    <string name="menu_delete">Excluir</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="hours_day">Hours By Day</string>
+    <string name="menu_edit">Edit</string>
+    <string name="menu_delete">Delete</string>
     <string name="context_menu_title">Checkpoint</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 </resources>
