--- a/trunk/res/values-pt/strings.xml
+++ b/trunk/res/values-pt/strings.xml
@@ -13,6 +13,7 @@
 	<string name="message_checkpoint_edited">Checkpoint Editado!</string>
 	<string name="message_checkpoint_deleted">Checkpoint excluído!</string>
 	<string name="total_hours">Total Executado:</string>
+	<string name="balance_hours">Saldo:</string>
 	<string name="monday">Segunda-Feira</string>
 	<string name="tuesday">Terça-Feira</string>
 	<string name="wednesday">Quarta-Feira</string>
