--- a/trunk/res/values-pt/strings.xml
+++ b/trunk/res/values-pt/strings.xml
@@ -35,4 +35,6 @@
 	<string name="confirm">Definir</string>
 	<string name="cancel">Cancelar</string>
 	<string name="prefs_error">Uma de suas preferências está errada, por favor corrija.</string>
+	<string name="csv_header">Entrada,Saída,Total</string>
+	<string name="export_error">Houve um erro na exportação!</string>
 </resources>
