--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="prefs_error">There is an error in of of your preferences, please check.</string>
+    <string name="csv_header">Check-in,Check-out,Amount</string>
+    <string name="export_error">There was an error exporting your checkpoints!</string>
 </resources>
