--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -23,6 +23,7 @@
 	<string name="dialog_hours_title">Horas por dia</string>
 	<string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
 	<string name="menu_settings">Preferências</string>
+	<string name="menu_export">Exportar CSV</string>
 	<string name="menu_add_checkpoint">Checkpoint</string>
 	<string name="dialog_add_checkpoint_title">Selecione a hora</string>
 	<string name="dialog_add_checkpoint_title2">Selecione o dia e a hora</string>
@@ -37,4 +38,6 @@
 	<string name="prefs_error">Uma de suas preferências está errada, por favor corrija.</string>
 	<string name="csv_header">Entrada,Saída,Total</string>
 	<string name="export_error">Houve um erro na exportação!</string>
+	<string name="export_email_subject">Exportação Banco de Horas</string>
+	<string name="chooser_email_title">Email:</string>
 </resources>
