--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -22,6 +22,7 @@
 	<string name="saturday">Sábado</string>
 	<string name="dialog_hours_title">Horas por dia</string>
 	<string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
+	<string name="menu_donate">Doação</string>
 	<string name="menu_settings">Preferências</string>
 	<string name="menu_export">Exportar CSV</string>
 	<string name="menu_add_checkpoint">Checkpoint</string>
