--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="saturday">Saturday</string>
     <string name="dialog_hours_title">Hours By Day</string>
     <string name="dialog_hours_summary">How many hours do you have to work this day? eg. 9:00</string>
+    <string name="menu_donate">Donate</string>
     <string name="menu_settings">Preferences</string>
     <string name="menu_export">Export to CSV</string>
     <string name="menu_add_checkpoint">Checkpoint</string>
