--- a/trunk/res/values-pt/strings.xml
+++ b/trunk/res/values-pt/strings.xml
@@ -20,9 +20,10 @@
 	<string name="thursday">Quinta-Feira</string>
 	<string name="friday">Sexta-Feira</string>
 	<string name="saturday">Sábado</string>
+	<string name="sunday">Domingo</string>
 	<string name="dialog_hours_title">Horas por dia</string>
 	<string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
-	<string name="menu_donate">Doação</string>
+	<string name="menu_donate">Ajude!</string>
 	<string name="menu_settings">Preferências</string>
 	<string name="menu_export">Exportar CSV</string>
 	<string name="menu_add_checkpoint">Checkpoint</string>
