--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -20,9 +20,10 @@
     <string name="thursday">Thursday</string>
     <string name="friday">Friday</string>
     <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
     <string name="dialog_hours_title">Hours By Day</string>
     <string name="dialog_hours_summary">How many hours do you have to work this day? eg. 9:00</string>
-    <string name="menu_donate">Donate</string>
+    <string name="menu_donate">Support!</string>
     <string name="menu_settings">Preferences</string>
     <string name="menu_export">Export to CSV</string>
     <string name="menu_add_checkpoint">Checkpoint</string>
