--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="message_backup_error">Backup not done! An error occured</string>
     <string name="message_restore_done">The restore of the last backup was successful!!</string>
     <string name="message_restore_error">Sorry, I couldn\'t restore the last backup, an error occured!</string>
+    <string name="message_erase_done">All checkpoints were deleted, you have a fresh database now...Enjoy it!</string>
+    <string name="message_erase_error">Ops...Sorry! Seems that no one checkpoint was deleted. Is that right?</string>
     <string name="total_hours">Total Time:</string>
     <string name="balance_hours">Balance:</string>
     <string name="monday">Monday</string>
@@ -41,7 +43,11 @@
     <string name="menu_delete">Delete</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_restore">Restore</string>
+    <string name="menu_erase">Erase Data</string>
+    <string name="dialog_erase_data">Are you sure? This will delete all checkpoints.</string>
     <string name="context_menu_title">Checkpoint</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
     <string name="prefs_error">There is an error in of of your preferences, please check.</string>
