--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -49,6 +49,7 @@
 	<string name="menu_backup">Backup</string>
     <string name="menu_restore">Restaurar</string>
     <string name="menu_erase">Apagar Dados</string>
+    <string name="menu_note">Anotação</string>
     <string name="dialog_erase_data">Tem certeza? Isso vai apagar todos os checkpoints</string>
     <string name="yes">Sim</string>
     <string name="no">Não</string>
