--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -39,6 +39,8 @@
 	<string name="menu_set_month">Mudar o Mês</string>
 	<string name="menu_previous_week">Semana anterior</string>
     <string name="menu_next_week">Próxima semana</string>
+    <string name="menu_previous_month">Mês Anterior</string>
+    <string name="menu_next_month">Próximo Mês</string>
 	<string name="dialog_add_checkpoint_title">Selecione a hora</string>
 	<string name="dialog_add_checkpoint_title2">Selecione o dia e a hora</string>
 	<string name="button_ok">OK</string>
@@ -81,18 +83,4 @@
 	<string name="label_time_to_go">Hora de Ir:</string>
 	<string name="notification_time_to_go">Ótimas notícias! Você já pode ir para casa!</string>
 	<string name="notification_title_time_to_go">Hora de Ir</string>
-	<string-array name="months">
-    	<item>Janeiro</item>
-		<item>Fevereiro</item>
-		<item>Março</item>
-		<item>Abril</item>
-		<item>Maio</item>
-		<item>Junho</item>
-		<item>Julho</item>
-		<item>Agosto</item>
-		<item>Setembro</item>
-		<item>Outubro</item>
-		<item>Novembro</item>
-		<item>Dezembro</item>
-    </string-array>
 </resources>
