--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -34,6 +34,7 @@
 	<string name="dialog_hours_summary">Digite quantas horas você tem que trabalhar nesse dia ex: 9:00</string>
 	<string name="menu_donate">Ajude!</string>
 	<string name="menu_settings">Preferências</string>
+	<string name="menu_widget">Adicionar Widget</string>
 	<string name="menu_export">Exportar CSV</string>
 	<string name="menu_add_checkpoint">Checkpoint</string>
 	<string name="menu_set_month">Mudar o Mês</string>
@@ -83,4 +84,16 @@
 	<string name="label_time_to_go">Hora de Ir:</string>
 	<string name="notification_time_to_go">Ótimas notícias! Você já pode ir para casa!</string>
 	<string name="notification_title_time_to_go">Hora de Ir</string>
+	<string name="pref_first_day_of_week">Primeiro dia da Semana</string>
+	<string name="pref_first_day_of_week_summary">Selecione o primeiro dia da semana</string>
+	<string name="pref_first_week_day_title">Selecione o dia</string>
+	<string-array name="week_days">
+		<item>Domingo</item>
+		<item>Segunda</item>
+		<item>Terça</item>
+		<item>Quarta</item>
+		<item>Quinta</item>
+		<item>Sexta</item>
+		<item>Sábado</item>
+	</string-array>
 </resources>
